--- a/app/src/main/res/layout/listview_element.xml
+++ b/app/src/main/res/layout/listview_element.xml
@@ -9,7 +9,11 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:padding="15dp">
-
+    <ImageView
+        android:id = "@+id/imageView"
+        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:layout_weight="0.11"/>
     <TextView
         android:id="@+id/tvoptions"
         android:layout_width="wrap_content"
